[package]
name = "substrate-bip39"
version = "0.4.4"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
edition = "2021"
description = "Converting BIP39 entropy to valid Substrate (sr25519) SecretKeys"
documentation = "https://docs.rs/substrate-bip39"
repository = "https://github.com/paritytech/substrate-bip39"

[dependencies]
pbkdf2 = { version = "0.12", default-features = false }
sha2 = "0.10"
hmac = "0.12"
schnorrkel = { version = "0.11", git = "https://github.com/serai-dex/schnorrkel", default-features = false }
zeroize = { version = "1", default-features = false }

[dev-dependencies]
tiny-bip39 = "0.8"
rustc-hex = "2"
